src/test/ui/impl-trait/negative-reasoning.min_tait.stderr
error[E0119]: conflicting implementations of trait `AnotherTrait` for type `D<impl OpaqueTrait>`:
  --> $DIR/negative-reasoning.rs:22:1
   |
LL | impl<T: std::fmt::Debug> AnotherTrait for T {}
   | ------------------------------------------- first implementation here
...
LL | impl AnotherTrait for D<OpaqueType> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `D<impl OpaqueTrait>`
   |
   = note: upstream crates may add a new impl of trait `std::fmt::Debug` for type `impl OpaqueTrait` in future versions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
